implementation refactor