@@ -1,29 +1,40 @@
 package com.github.maleksandrowicz93.cqrsdemo.student;
 
-import com.github.maleksandrowicz93.cqrsdemo.student.dto.AddStudentCommand;
+import com.github.maleksandrowicz93.cqrsdemo.student.dto.SaveStudentRequest;
 import com.github.maleksandrowicz93.cqrsdemo.student.dto.StudentDto;
 import com.github.maleksandrowicz93.cqrsdemo.student.exception.InvalidCredentialsException;
 import com.github.maleksandrowicz93.cqrsdemo.student.exception.StudentAlreadyExistsException;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.log4j.Log4j2;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Component;
 
+@Log4j2
+@Component
 @RequiredArgsConstructor
 class AddStudentCommandHandler {
 
-    private final StudentRepository studentRepository;
+    final StudentRepository studentRepository;
+    final PasswordEncoder passwordEncoder;
+    final StudentMapper studentMapper;
 
-    StudentDto handle(AddStudentCommand command) throws InvalidCredentialsException, StudentAlreadyExistsException {
-        String email = command.getEmail();
-        boolean isEmailInvalid = email == null || email.isBlank();
-        String password = command.getPassword();
-        boolean isPasswordInvalid = password == null || password.isBlank();
-        if (isEmailInvalid || isPasswordInvalid) {
+    StudentDto handle(SaveStudentRequest command) {
+        var email = command.email();
+        var blankEmail = StringUtils.isBlank(email);
+        var blankPassword = StringUtils.isBlank(command.password());
+        if (blankEmail || blankPassword) {
+            log.error("Invalid email or password. Passed email: {}.", email);
             throw new InvalidCredentialsException();
         }
         if (studentRepository.existsByEmail(email)) {
+            log.error("Student with email {} already exists", email);
             throw new StudentAlreadyExistsException();
         }
-        Student student = StudentConverters.ADD_STUDENT_COMMAND_TO_STUDENT.convert(command);
-        student = studentRepository.save(student);
-        return StudentConverters.STUDENT_TO_STUDENT_DTO.convert(student);
+        var student = studentMapper.toStudent(command);
+        var encodedPassword = passwordEncoder.encode(student.password());
+        student.password(encodedPassword);
+        var savedStudent = studentRepository.save(student);
+        return studentMapper.toStudentDto(savedStudent);
     }
 }
